--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt | E-Majstore!</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <div>Pocetna</div>
-        <div>Usluge</div>
-        <div>Recenzije</div>
-        <div>Kontakt</div>
+        <div class="logo">
+            <img src="../img/logooo.png" alt="logo-slika">
+        </div>
+        
+        <ul class="nav-linkovi">
+            <li><a href="./index.html">Početna</a></li> 
+            <li><a href="./usluge.html">Usluge</a></li>
+            <li><a href="./recenzije.html">Recenzije</a></li>
+            <li><a href="./kontakt.html">Kontakt</a></li>
+        </ul>
+        <div class="burger">
+            <div class="linija1"></div>
+            <div class="linija2"></div>
+            <div class="linija3"></div>
+        </div>
     </nav>
  
     <main>
@@ -59,6 +74,8 @@
         <p>Made with ♥ by: Luka Stajković, Filip Mitić, Jovan Radojičić
         </p>
     </footer>
+
+    <script src="../script/script.js"></script>
     
 </body>
 </html>
