dodato scroll-to-top dugme i manje izmene teksta

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                 <img class="logo" src="../img/logo.png" alt="logo-slika">
 
                 <h1 class="cover-title">E - Majstore</h1>
-                <h2 class="cover-mini-title">Tu smo kada je najpotrebnije</h2>
+                <h2 class="cover-mini-title">"Tu smo kada je najpotrebnije"</h2>
         
             </div>
         </div>
@@ -66,7 +66,7 @@
         </div>
         
         <div id="mapa">
-            <h2>Gde se nalazimo?</h2>
+            <h2 class="mapa-naslov">Gde se nalazimo?</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2832.8622396331384!2d20.48047627576129!3d44.76322417993595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a70fda13cd3cf%3A0xbc0dd03fe5d70571!2z0KHRgtGD0LTQtdC90YLRgdC60Lgg0LTQvtC8IOKAnjQuINCw0L_RgNC40LvigJ0!5e0!3m2!1sen!2srs!4v1699396070913!5m2!1sen!2srs" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
@@ -78,6 +78,10 @@
         <p class="footer-imena">Luka Stajković, Filip Mitić, Jovan Radojičić
         </p>
     </footer>
+
+    <a href="#" class="to-top">
+        <div class="arrow">^</div>
+    </a>
 
     <script src="../script/script.js"></script>
 
