--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -88,6 +88,10 @@
         <p id="kreatori">Made with ♥ by: Luka Stajković, Filip Mitić, Jovan Radojičić</p>
     </footer>
 
+    <a href="#" class="to-top">
+        <div class="arrow">^</div>
+    </a>
+
     <script src="../script/script.js"></script>
 
     
