--- a/src/recenzije.html
+++ b/src/recenzije.html
@@ -217,5 +217,9 @@
         <p>Copyright © 2023. Sva prava su zadržana. Made with ♥ by: Luka Stajković, Filip Mitić, Jovan Radojičić</p>
     </footer>
 
+    <a href="#" class="to-top">
+        <div class="arrow">^</div>
+    </a>
+
 </body>
 </html>
