--- a/src/usluge.html
+++ b/src/usluge.html
@@ -49,6 +49,10 @@
         <p>Made with ♥ by: Luka Stajković, Filip Mitić, Jovan Radojičić</p>
     </footer>
 
+    <a href="#" class="to-top">
+        <div class="arrow">^</div>
+    </a>
+
     <script src="../script/script.js"></script>
 
 </body>
