--- a/src/vodoinstalateri.html
+++ b/src/vodoinstalateri.html
@@ -68,8 +68,10 @@
     </main>
 
     <footer>
-        <p>Copyright © 2023. Sva prava su zadržana.</p>
-        <p>Made with ♥ by: Luka Stajković, Filip Mitić, Jovan Radojičić</p>
+        <p></p>
+        <p class="footer-projekat">II domaći iz EPOS-a</p>
+        <p class="footer-imena">Luka Stajković 2021/0129<br> Filip Mitić 2021/0197<br> Jovan Radojičić 2021/0200
+        </p>
     </footer>
     
     <a href="#" class="to-top">
