--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakeet | E-Majstore!</title>
+    <title>Kontakti | E-Majstore!</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,8 +84,10 @@
     </main>
 
     <footer>
-        <p id="kopi">Copyright © 2023. Sva prava su zadržana.</p>
-        <p id="kreatori">Made with ♥ by: Luka Stajković, Filip Mitić, Jovan Radojičić</p>
+        <p></p>
+        <p class="footer-projekat">II domaći iz EPOS-a</p>
+        <p class="footer-imena">Luka Stajković 2021/0129<br> Filip Mitić 2021/0197<br> Jovan Radojičić 2021/0200
+        </p>
     </footer>
 
     <a href="#" class="to-top">
