bugfix - responzivnost prve strane, flexbox

--- a/src/index.html
+++ b/src/index.html
@@ -49,26 +49,26 @@
             </p>
         </div>
         <h2 class="ocene-naslov">Šta drugi misle o nama:</h2>
-        <div clas="ocene-flex">
+        <div class="ocene-flex">
             <div class="osoba osoba1">
                 <img src="../img/placeholder-1-1.webp" alt="osoba-1" class="slika-osoba">
                 <h3>Petar Stanković (42)</h3>
-                <p>Sjajna platforma! Kroz 5 minuta sam našao majstora za ugradnju led panela. Sve preporuke.</p>
+                <p>Sjajna platforma! <br>Kroz 5 minuta sam našao majstora <br> za ugradnju led panela. <br> Sve preporuke.</p>
             </div>
             <div class="osoba osoba2">
                 <img src="../img/placeholder-1-1.webp" alt="osoba-2" class="slika-osoba">
                 <h3>Marko Nikačević (50)</h3>
-                <p>Lako i vrlo brzo. Izuzetno sam zadovoljan E-Majstorom! Hvala</p>
+                <p>Lako i vrlo brzo. <br>Izuzetno sam zadovoljan E-Majstorom! <br>Hvala Vam</p>
             </div>
             <div class="osoba osoba3">
                 <img src="../img/placeholder-1-1.webp" alt="osoba-3" class="slika-osoba">
                 <h3>Jelisaveta Marković (32)</h3>
-                <p>Super! Sve preporuke za molera Dušana. Zakazivanje je bilo jako brzo!</p>
+                <p>Super! Sve preporuke za molera Dušana. <br>Zakazivanje je bilo jako brzo!</p>
             </div>
             <div class="osoba osoba4">
                 <img src="../img/placeholder-1-1.webp" alt="osoba-4" class="slika-osoba">
                 <h3>Petar Stanković (30)</h3>
-                <p>Iskreno, pridružio sam se platformi bez očekivanja, ali je sve bilo brzo i jednostavno. Sigurno ću je koristi ponovo!</p>
+                <p>Pridružio sam se platformi bez očekivanja,<br> ali je sve bilo brzo i jednostavno. <br>Sigurno ću je koristi ponovo!</p>
             </div>
         </div>
         
