manje izmene, bug fixovi

--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -27,7 +27,7 @@
             <div class="linija3"></div>
         </div>
     </nav>
-
+ 
     <main>
         <h2 id="kontakt-h2">Za sva vaša pitanja kontaktirajte nas putem forme:</h2>
         <div>
@@ -40,7 +40,7 @@
                    <br>
                    <label for="adresa">Vaša adresa:</label> 
                    <br>
-                   <input type="text" name="" id="adresa" size="30px" required="required" pattern="^[A-Za-z -]+[0-9]" title="Unesite adresu
+                   <input type="text" name="" id="adresa" size="30px" required="required" title="Unesite adresu
                    koristeci samo slova i brojeve">
                    <br>
                    <br>
@@ -82,20 +82,20 @@
              </form>
         </div>
     </main>
-
+ 
     <footer>
         <p></p>
         <p class="footer-projekat">II domaći iz EPOS-a</p>
         <p class="footer-imena">Luka Stajković 2021/0129<br> Filip Mitić 2021/0197<br> Jovan Radojičić 2021/0200
         </p>
     </footer>
-
+ 
     <a href="#" class="to-top">
         <div class="arrow">^</div>
     </a>
-
+ 
     <script src="../script/script.js"></script>
-
+ 
     
 </body>
 </html>
