--- a/src/vodoinstalateri.html
+++ b/src/vodoinstalateri.html
@@ -45,7 +45,8 @@
             <p>u rešavanju vodoinstalaterskih izazova. Njegovi izumi poput "Nečujne cevi" i "Magičnog</p>
             <p>ključa" postali su revolucionarni u vodoinstalaterskom svetu. Sa smislom za humor, Srđan</p>
             <p>je svojim klijentima donosio ne samo rešenja, već i osmeh na lice. Njegova filozofija "Svi</p>
-            <p>problemi su rešivi, kao i curenje cevi!" postala je poznata širom grada.</p>
+            <p>problemi su rešivi, kao i curenje cevi!" postala je poznata širom grada. Veliki broj</p>
+            <p>vodoinstalatera početnika zeleo je baš njega za mentora.</p>
         </div>
 
         <div id="vodoinstalater3" class="vodoinstalater12">
