--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -40,7 +40,7 @@
                    <br>
                    <label for="adresa">Vaša adresa:</label> 
                    <br>
-                   <input type="text" name="" id="adresa" size="30px" required="required" pattern="^[A-Za-z -]+[0-9]" title="Unesite adresu
+                   <input type="text" name="" id="adresa" size="30px" required="required" title="Unesite adresu
                    koristeci samo slova i brojeve">
                    <br>
                    <br>
