dodat jQuery u formu, dodate slike na pocetnu stranu

--- a/src/recenzije.html
+++ b/src/recenzije.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Majstore</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="#">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 <body>
     
-
     <nav>
         <div class="logo">
             <a href="./index.html"><img src="../img/logo.png" alt="logo-slika"></a>
@@ -30,12 +31,10 @@
             <div class="linija3"></div>
         </div>
     </nav>
-     
 
     <main>
-
-    <h1 align="center" class="naslov">Recenzije</h1>
-    <hr>
+        <h1 align="center" class="naslov">Recenzije</h1>
+        <hr>
 
     <div class="testimonial-box-container">
 
@@ -211,18 +210,18 @@
 
 
 
-    <script src="../script/script.js"></script>
 
-    <footer>
-        <p></p>
-        <p class="footer-projekat">II domaći iz EPOS-a</p>
-        <p class="footer-imena">Luka Stajković 2021/0129<br> Filip Mitić 2021/0197<br> Jovan Radojičić 2021/0200
-        </p>
-    </footer>
+<footer>
+    <p></p>
+    <p class="footer-projekat">II domaći iz EPOS-a</p>
+    <p class="footer-imena">Luka Stajković 2021/0129<br> Filip Mitić 2021/0197<br> Jovan Radojičić 2021/0200
+    </p>
+</footer>
 
-    <a href="#" class="to-top">
-        <div class="arrow">^</div>
-    </a>
+<a href="#" class="to-top">
+    <div class="arrow">^</div>
+</a>
 
+<script src="../script/script.js"></script>
 </body>
 </html>
