--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="#">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 <body>
     <nav>
@@ -51,24 +54,24 @@
         <h2 class="ocene-naslov">Šta drugi misle o nama:</h2>
         <div class="ocene-flex">
             <div class="osoba osoba1">
-                <img src="../img/placeholder-1-1.webp" alt="osoba-1" class="slika-osoba">
-                <h3>Petar Stanković (42)</h3>
+                <img src="../img/ian-dooley-d1UPkiFd04A-unsplash.jpg" alt="osoba-1" class="slika-osoba">
+                <h3>Petar Stanković (28)</h3>
                 <p>Sjajna platforma! <br>Kroz 5 minuta sam našao majstora <br> za ugradnju led panela. <br> Sve preporuke.</p>
             </div>
             <div class="osoba osoba2">
-                <img src="../img/placeholder-1-1.webp" alt="osoba-2" class="slika-osoba">
-                <h3>Marko Nikačević (50)</h3>
+                <img src="../img/HS1A0003-Edit.jpg" alt="osoba-2" class="slika-osoba">
+                <h3>Marko Nikačević (56)</h3>
                 <p>Lako i vrlo brzo. <br>Izuzetno sam zadovoljan E-Majstorom! <br>Hvala Vam</p>
             </div>
             <div class="osoba osoba3">
-                <img src="../img/placeholder-1-1.webp" alt="osoba-3" class="slika-osoba">
-                <h3>Jelisaveta Marković (32)</h3>
+                <img src="../img/60771.jpeg" alt="osoba-3" class="slika-osoba">
+                <h3>Jelisaveta Marković (48)</h3>
                 <p>Super! Sve preporuke za molera Dušana. <br>Zakazivanje je bilo jako brzo!</p>
             </div>
             <div class="osoba osoba4">
-                <img src="../img/placeholder-1-1.webp" alt="osoba-4" class="slika-osoba">
-                <h3>Petar Stanković (30)</h3>
-                <p>Pridružio sam se platformi bez očekivanja,<br> ali je sve bilo brzo i jednostavno. <br>Sigurno ću je koristi ponovo!</p>
+                <img src="../img/portrait-beautiful-blond-woman-with-trendy-hairstyle.jpg" alt="osoba-4" class="slika-osoba">
+                <h3>Nikolija Romanov (25)</h3>
+                <p>Pridružila sam se platformi bez očekivanja,<br> ali je sve bilo brzo i jednostavno. <br>Sigurno ću je koristi ponovo!</p>
             </div>
         </div>
         
