manji bug fixevi, jquery ispravke

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="./index.html"><img src="../img/logo.png" alt="logo-slika"></a>
+            <a href="#"><img src="../img/logo.png" alt="logo-slika"></a>
         </div>
         
         <ul class="nav-linkovi">
@@ -96,6 +96,7 @@
     </a>
 
     <script src="../script/script.js"></script>
+    <script src="../script/pocetna-click.js"></script>
 
 </body>
 </html>
