--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="#">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <nav>
@@ -54,25 +54,25 @@
                     <br>
                     <label for="grad">Opština:</label>
                     <br>
-                    <select name="" id="grad-izbor-id" required="required">
-                        <option value="opcija1">Izaberite opštinu</option>
-                        <option value="opcija2">Barajevo</option>
-                        <option value="opcija3">Voždovac</option>
-                        <option value="opcija4">Vračar</option>
-                        <option value="opcija5">Grocka</option>
-                        <option value="opcija6">Zemun</option>
-                        <option value="opcija7">Zvezdara</option>
-                        <option value="opcija8">Lazarevac</option>
-                        <option value="opcija9">Mladenovac</option>
-                        <option value="opcija10">Novi Beograd</option>
-                        <option value="opcija11">Obrenovac</option>
-                        <option value="opcija12">Palilula</option>
-                        <option value="opcija13">Rakovica</option>
-                        <option value="opcija14">Savski venac</option>
-                        <option value="opcija15">Sopot</option>
-                        <option value="opcija16">Stari grad</option>
-                        <option value="opcija17">Surčin</option>
-                        <option value="opcija18">Čukarica</option>
+                    <select name="" id="" required="required">
+                        <option value="">Izaberite opštinu</option>
+                        <option value="">Barajevo</option>
+                        <option value="">Voždovac</option>
+                        <option value="">Vračar</option>
+                        <option value="">Grocka</option>
+                        <option value="">Zemun</option>
+                        <option value="">Zvezdara</option>
+                        <option value="">Lazarevac</option>
+                        <option value="">Mladenovac</option>
+                        <option value="">Novi Beograd</option>
+                        <option value="">Obrenovac</option>
+                        <option value="">Palilula</option>
+                        <option value="">Rakovica</option>
+                        <option value="">Savski venac</option>
+                        <option value="">Sopot</option>
+                        <option value="">Stari grad</option>
+                        <option value="">Surčin</option>
+                        <option value="">Čukarica</option>
                     </select>
                     <br>
                     <br>
@@ -80,7 +80,7 @@
                     <br>
                     <textarea name="" id="problem" cols="32" rows="9" placeholder="Opis problema" required="required"></textarea>
                     <br>
-                    <button type="submit">Pošalji</button>
+                    <button type="submit" id="dugme">Pošalji</button>
              </form>
         </div>
     </main>
@@ -96,9 +96,11 @@
         <div class="arrow">^</div>
     </a>
  
-    <script src="../script/forma-script.js"></script>
     <script src="../script/script.js"></script>
- 
+    <!-- <script src="../script/forma-script.js"></script> -->
+    <script src="../script/forma-script-jquery.js"></script>
+    <script src="../script/pocetna-click.js"></script>
+    
     
 </body>
 </html>
