--- a/src/moleri.html
+++ b/src/moleri.html
@@ -81,6 +81,7 @@
     </a>
 
     <script src="../script/script.js"></script>
+    <script src="../script/pocetna-click.js"></script>
 
 </body>
 </html>
