--- a/src/vodoinstalateri.html
+++ b/src/vodoinstalateri.html
@@ -38,8 +38,7 @@
             <p>Svoju karijeru započeo je kao radnik u vodovodnoj firmi, ali je brzo postao prepoznatljiv </p>
             <p>zbog kreativnog pristupa rešavanju problema. Mile je postao ikona u svojoj branši </p> 
             <p>zahvaljujući kombinaciji tradicionalnih metoda i najnovijih tehnologija. Patentirao je </p>
-            <p>"Pametnu Slavinu 3000", a osim stručnih uspeha, bio je angažovan i u humanitarnim </p> 
-            <p>projektima, pomažući pristup vodi u ruralnim područjima.</p>
+            <p>"Pametnu Slavinu 3000". Bio je angažovan i u humanitarnim projektima.</p>
         </div>
 
         <div id="vodoinstalater2" class="vodoinstalater12">
@@ -48,8 +47,7 @@
             <p>u rešavanju vodoinstalaterskih izazova. Njegovi izumi poput "Nečujne cevi" i "Magičnog</p>
             <p>ključa" postali su revolucionarni u vodoinstalaterskom svetu. Sa smislom za humor, Srđan</p>
             <p>je svojim klijentima donosio ne samo rešenja, već i osmeh na lice. Njegova filozofija "Svi</p>
-            <p>problemi su rešivi, kao i curenje cevi!" postala je poznata širom grada. Veliki broj</p>
-            <p>vodoinstalatera početnika zeleo je baš njega za mentora.</p>
+            <p>problemi su rešivi, kao i curenje cevi!" postala je poznata širom grada.</p>
         </div>
 
         <div id="vodoinstalater3" class="vodoinstalater12">
@@ -83,6 +81,8 @@
     </a>
 
     <script src="../script/script.js"></script>
+    <script src="../script/pocetna-click.js"></script>
+
 
 </body>
 </html>
