--- a/src/usluge.html
+++ b/src/usluge.html
@@ -31,7 +31,7 @@
         </div>
     </nav>
 
-    <main>
+    <main class="main-usluge">
         <div class="vodoinstalateri">
             <img src="../img/Vodoinstalater-slika-1.jpg" class="pointer" alt="" width="800px" height="300px" onclick="preusmeriNaVodoinstalatere()" onmouseover="uvecajSliku1(this)" onmouseout="smanjiSliku1(this)">
             <br>
@@ -59,6 +59,8 @@
     </a>
 
     <script src="../script/script.js"></script>
+    <script src="../script/pocetna-click.js"></script>
+
 
 </body>
 </html>
