izmenjene slike u usluge tab-u

--- a/src/usluge.html
+++ b/src/usluge.html
@@ -33,17 +33,17 @@
 
     <main class="main-usluge">
         <div class="vodoinstalateri">
-            <img src="../img/Vodoinstalater-slika-1.jpg" class="pointer" alt="" width="800px" height="300px" onclick="preusmeriNaVodoinstalatere()" onmouseover="uvecajSliku1(this)" onmouseout="smanjiSliku1(this)">
+            <img src="../img/usluge-fotke/VOD.png" class="pointer" alt="" width="800px" height="300px" onclick="preusmeriNaVodoinstalatere()" onmouseover="uvecajSliku1(this)" onmouseout="smanjiSliku1(this)">
             <br>
         </div>
 
         <div class="elektricari">
-            <img src="../img/AdobeStock_170179753-1920x900.jpg" class="pointer" alt="" width="800px" height="300px" onclick="preusmeriNaElektricare()" onmouseover="uvecajSliku1(this)" onmouseout="smanjiSliku1(this)">
+            <img src="../img/usluge-fotke/EL.png" class="pointer" alt="" width="800px" height="300px" onclick="preusmeriNaElektricare()" onmouseover="uvecajSliku1(this)" onmouseout="smanjiSliku1(this)">
             <br>
         </div>
         
         <div class="moleri">
-            <img src="../img/Fotkica-moleri.jpg" class="pointer" alt="" width="800px" height="300px" onclick="preusmeriNaMolere()" onmouseover="uvecajSliku1(this)" onmouseout="smanjiSliku1(this)">
+            <img src="../img/usluge-fotke/MOL.png" class="pointer" alt="" width="800px" height="300px" onclick="preusmeriNaMolere()" onmouseover="uvecajSliku1(this)" onmouseout="smanjiSliku1(this)">
         </div>
     </main>
 
