--- a/src/recenzije.html
+++ b/src/recenzije.html
@@ -33,8 +33,7 @@
     </nav>
 
     <main>
-        <h1 align="center" class="naslov">Recenzije</h1>
-        <hr>
+        <h1 align="center" class="naslov">Recenzije
 
         <div class="testimonial-box-container">
 
@@ -131,7 +130,7 @@
                 </div>
                 
                 <div class="client-comment">
-                    <p class="rec-tekst">Rad sa molerom je bio izvanredan. Pokazao je visok nivo veštine i pažnje ka detaljima, pristupivši poslu sa stručnošću i posvećenošću. Komunikacija je bila odlična, jasno je objasnio plan rada i vreme koje će biti potrebno. Moler je veoma efikasno odradio posao, a rezultati su premašili moja očekivanja. Sve pohvale za njegovu veštinu i profesionalnost tokom cele intervencije.</p>
+                    <p class="rec-tekst">Rad sa molerom je bio izvanredan. Pokazao je visok nivo veštine i pažnje ka detaljima, pristupivši poslu sa stručnošću i posvećenošću. Komunikacija je bila odlična, jasno je objasnio plan rada i vreme koje će biti potrebno. Moler je veoma efikasno odradio posao, a rezultati su premašili moja očekivanja.</p>
 
 
                 </div>
@@ -163,7 +162,11 @@
                 </div>
                 
                 <div class="client-comment">
-                    <p class="rec-tekst">Iskustvo sa električarem je bilo veoma pozitivno. Pokazao je visok nivo profesionalizma i znanja tokom rada, pristupivši poslu sa veštinom i brigom. Komunikacija je bila odlična, jasno je objasnio proces rada, ali bih volela malo više informacija o vremenskom okviru. Električar je efikasno rešio problem i bio izuzetno ljubazan tokom cele intervencije.</p>
+                    <p class="rec-tekst">Iskustvo sa električarem je bilo veoma pozitivno. 
+                        Pokazao je visok nivo profesionalizma i znanja tokom rada, pristupivši 
+                        poslu sa veštinom i brigom. Komunikacija je bila odlična, jasno je objasnio 
+                        proces rada, ali bih volela malo više informacija o vremenskom okviru.
+                         Električar je efikasno rešio problem i bio sjajan!</p>
 
 
                 </div>
