--- a/src/vodoinstalateri.html
+++ b/src/vodoinstalateri.html
@@ -15,14 +15,14 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="./index.html"><img src="../img/logo.png" alt="logo-slika"></a>
+            <a href="#"><img src="../img/logo.png" alt="logo-slika"></a>
         </div>
         
         <ul class="nav-linkovi">
-            <li><a href="./index.html">Početna</a></li> 
-            <li><a href="./usluge.html">Usluge</a></li>
-            <li><a href="./recenzije.html">Recenzije</a></li>
-            <li><a href="./kontakt.html">Kontakt</a></li>
+            <li class="nav-item"><a href="./index.html">Početna</a></li> 
+            <li class="nav-item"><a href="./usluge.html">Usluge</a></li>
+            <li class="nav-item"><a href="./recenzije.html">Recenzije</a></li>
+            <li class="nav-item"><a href="./kontakt.html">Kontakt</a></li>
         </ul>
         <div class="burger">
             <div class="linija1"></div>
@@ -30,7 +30,7 @@
             <div class="linija3"></div>
         </div>
     </nav>
-
+    
     <main id="vodoinstalateri">
         <div id="vodoinstalater1" class="vodoinstalater12">
             <img src="../img/Plumber-who-is-30-years-old--who-graduated--has-tools-in-hands.png" width="500px" height="300px" onmouseover="prikaziInformacije(this, 'Prosečna ocena: 4.5')" onmouseout="smanjiElement(this)">
