--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -19,10 +19,10 @@
         </div>
         
         <ul class="nav-linkovi">
-            <li><a href="./index.html">Početna</a></li> 
-            <li><a href="./usluge.html">Usluge</a></li>
-            <li><a href="./recenzije.html">Recenzije</a></li>
-            <li><a href="./kontakt.html">Kontakt</a></li>
+            <li class="nav-item"><a href="./index.html">Početna</a></li> 
+            <li class="nav-item"><a href="./usluge.html">Usluge</a></li>
+            <li class="nav-item"><a href="./recenzije.html">Recenzije</a></li>
+            <li class="nav-item"><a href="./kontakt.html">Kontakt</a></li>
         </ul>
         <div class="burger">
             <div class="linija1"></div>
