--- a/src/recenzije.html
+++ b/src/recenzije.html
@@ -16,14 +16,14 @@
     
     <nav>
         <div class="logo">
-            <a href="./index.html"><img src="../img/logo.png" alt="logo-slika"></a>
+            <a href="#"><img src="../img/logo.png" alt="logo-slika"></a>
         </div>
         
         <ul class="nav-linkovi">
-            <li><a href="./index.html">Početna</a></li> 
-            <li><a href="./usluge.html">Usluge</a></li>
-            <li><a href="./recenzije.html">Recenzije</a></li>
-            <li><a href="./kontakt.html">Kontakt</a></li>
+            <li class="nav-item"><a href="./index.html">Početna</a></li> 
+            <li class="nav-item"><a href="./usluge.html">Usluge</a></li>
+            <li class="nav-item"><a href="./recenzije.html">Recenzije</a></li>
+            <li class="nav-item"><a href="./kontakt.html">Kontakt</a></li>
         </ul>
         <div class="burger">
             <div class="linija1"></div>
