--- a/src/elektricari.html
+++ b/src/elektricari.html
@@ -81,6 +81,8 @@
     </a>
 
     <script src="../script/script.js"></script>
+    <script src="../script/pocetna-click.js"></script>
+
 
 </body>
 </html>
